--- a/app/src/main/res/layout/user_list.xml
+++ b/app/src/main/res/layout/user_list.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:descendantFocusability="blocksDescendants"
-    android:weightSum="1">
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/Username"
+    android:layout_width="wrap_content"
+    android:layout_height="50dp"
+    android:text="@string/placeholder"
+    android:textSize="20sp"
+    android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/Username"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/placeholder" />
-
-</LinearLayout>
