--- a/app/src/main/res/menu/menu_user_list.xml
+++ b/app/src/main/res/menu/menu_user_list.xml
@@ -5,4 +5,8 @@
     <item
         android:title="@string/logout"
         android:id="@+id/logout_button" />
+
+    <item
+        android:title="@string/new_user"
+        android:id="@+id/new_user_button" />
 </menu>
