--- a/app/src/main/res/layout/fragment_pictures.xml
+++ b/app/src/main/res/layout/fragment_pictures.xml
@@ -17,14 +17,21 @@
         android:layout_height="wrap_content"
         android:text="@string/picture_gallery" />
 
+    <Button
+        android:id="@+id/send"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/send_to_mirror" />
+
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/gridview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:columnWidth="90dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
+        android:gravity="center"
         android:horizontalSpacing="10dp"
+        android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:gravity="center" />
+        android:verticalSpacing="10dp" />
+
 </LinearLayout>
